--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,31 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+  .quoteForm {
+    grid-template-columns: 1fr;
+    font-size: 1rem;
+    row-gap: 10px;
+  }
+  .quoteForm>li h6{
+    font-size: 1rem;
+  }
+  .quoteSelectionValue{
+    margin-bottom: 2rem;
+    padding:15px;
+  }
+}
+
+@media (min-width: 769px) {
+  .quoteForm {
+    grid-template-columns: 0.5fr 1fr 0.5fr;
+  column-gap: 20px;
+  row-gap: 15px;
+}
+.quoteForm>li h6{
+  font-size: 1rem;
+}
 }
