--- a/src/index.css
+++ b/src/index.css
@@ -24,12 +24,20 @@
   }
   .quoteItemContainer{
     margin: 10px;
+    padding: 20px;
+    gap: 20px;
+   }
+   .quoteDetailsList{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
    }
 }
 
 @media (min-width: 769px) {
  .quoteItemContainer{
   margin: 50px;
+  padding: "75px",
  }
   .quoteForm {
     grid-template-columns: 0.5fr 1fr 0.5fr;
@@ -42,4 +50,9 @@
 .quoteForm>li p{
   font-size: 1.25rem;
 }
+.quoteDetailsList{
+  display: grid;
+  grid-template-columns: 0.5fr 1fr;
+  padding: 50px;
+ }
 }
