--- a/src/index.css
+++ b/src/index.css
@@ -23,26 +23,40 @@
     padding:15px;
   }
   .quoteFormContainer{
-    margin: 10px;
-    padding: 20px;
+    padding: 0px 20px;
     gap: 20px;
    }
    .quoteDetailsList{
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;
+    margin: 25px 0px;
+   }
+   .quoteDetailsList h3{
+margin-bottom: 25px;
    }
    .quoteFormList{
     display: grid;
     grid-template-columns: 1fr;
-    gap: 10px;
+    grid-template-rows: 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr;
+    row-gap: 25px;
    }
    .quoteFormList label{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 1.25rem;
+    font-weight: bold;
    }
+   .quoteFormList input{
+    background-color: hsl(240, 100%, 10%);
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+    border-radius: 10px;
+    padding: 0px 20px;
+  }
 }
 
 @media (min-width: 769px) {
