--- a/src/index.css
+++ b/src/index.css
@@ -57,12 +57,18 @@ margin-bottom: 25px;
     border-radius: 10px;
     padding: 0px 20px;
   }
+  .quoteFormContainer button{
+    margin-top: 25px;
+  }
 }
 
 @media (min-width: 769px) {
  .quoteFormContainer{
   margin: 50px;
   padding: "75px",
+ }
+ .quoteItemContainer{
+  margin: 50px;
  }
   .quoteForm {
   grid-template-columns: 0.5fr 1fr 0.5fr;
