Fix styling for additional information input

--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ margin-bottom: 25px;
    .quoteFormList{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr;
+    grid-template-rows: 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr;
     row-gap: 25px;
    }
    .quoteFormList label{
