--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,7 @@
     font-size: 1rem;
     border-radius: 10px;
     padding: 0px 20px;
+    border: none;
   }
   .quoteFormContainer button {
     margin-top: 25px;
@@ -117,5 +118,6 @@
     font-size: 1rem;
     border-radius: 10px;
     padding: 0px 20px;
+    border: none;
   }
 }
